--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ deps=
 	pylint
 commands=
 	pep8 .
-	pylint mc.py --report=no
-	coverage run --source mc.py -m py.test -v
+	pylint montecarlo.py --report=no
+	coverage run --source montecarlo.py -m py.test -v
 	coverage report
 	coverage html
