--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ deps=
 	pylint
 commands=
 	pep8 .
-	pylint montecarlo.py --report=no
+	pylint montecarlo.py --report=no --rcfile=pylintrc
 	coverage run --source montecarlo.py -m py.test -v
 	coverage report
 	coverage html
